feat: initialize secure file sharing application with Spring Boot backend and dashboard UI